--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "next": "14.2.4",
     "react": "^18",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18",
     "sass": "^1.77.6"
   },
