--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@stripe/react-stripe-js": "^2.7.3",
     "bootstrap": "^5.3.3",
     "next": "14.2.4",
-    "react": "^18",
+    "react": "^18.0.0",
     "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18",
+    "react-dom": "^18.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
