--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "stripe": "^16.2.0"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
