--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@stripe/react-stripe-js": "^2.7.3",
     "bootstrap": "^5.3.3",
+    "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
     "next": "14.2.4",
     "react": "^18.0.0",
     "react-bootstrap-icons": "^1.11.4",
