--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.0.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.6",
