--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-
 # vercel
 .vercel
 
@@ -35,7 +32,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 .aider*
+
 .env
-.env
-.env
-.env
+.env.local
+.env.production
